extends CharacterBody2D

@export var movement_speed: float = 500
@export var run_speed_multiplier: float = 1.8
@export var acceleration: float = 2000
@export var friction: float = 1500
@export var energy_drain_rate: float = 15.0  # —ç–Ω–µ—Ä–≥–∏—è –≤ —Å–µ–∫—É–Ω–¥—É –ø—Ä–∏ –±–µ–≥–µ

var character_direction: Vector2
var speed_multiplier: float = 1.0
var is_running: bool = false
var can_move: bool = true  # –î–ª—è –¥–∏–∞–ª–æ–≥–æ–≤
var is_walking: bool = false  # –î–ª—è –∑–≤—É–∫–∞ —Ö–æ–¥—å–±—ã
var was_running: bool = false  # –î–ª—è –æ—Ç—Å–ª–µ–∂–∏–≤–∞–Ω–∏—è –∏–∑–º–µ–Ω–µ–Ω–∏—è —Å–æ—Å—Ç–æ—è–Ω–∏—è –±–µ–≥–∞

@onready var ui_manager = get_tree().root.find_child("UIManager", true, false)
@onready var player_stats: PlayerStats = $PlayerStats
@onready var item_display: Sprite2D = $ItemDisplay
@onready var walk_sound: AudioStreamPlayer2D = $WalkSound
@onready var run_sound: AudioStreamPlayer2D = $RunSound

func _physics_process(delta):
	# –ü–æ–ª—É—á–∞–µ–º –Ω–∞–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –¥–≤–∏–∂–µ–Ω–∏—è
	character_direction = Vector2.ZERO

	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –º–æ–∂–µ–º –ª–∏ –º—ã –¥–≤–∏–≥–∞—Ç—å—Å—è (–∏–Ω–≤–µ–Ω—Ç–∞—Ä—å –∑–∞–∫—Ä—ã—Ç –ò –Ω–µ—Ç –¥–∏–∞–ª–æ–≥–∞)
	var can_move_now = can_move and not (ui_manager and ui_manager.inventory.visible)

	if can_move_now:
		if Input.is_action_pressed("ui_left") or Input.is_key_pressed(KEY_A):
			character_direction.x -= 1
		if Input.is_action_pressed("ui_right") or Input.is_key_pressed(KEY_D):
			character_direction.x += 1
		if Input.is_action_pressed("ui_up") or Input.is_key_pressed(KEY_W):
			character_direction.y -= 1
		if Input.is_action_pressed("ui_down") or Input.is_key_pressed(KEY_S):
			character_direction.y += 1

	character_direction = character_direction.normalized()
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –±–µ–≥ (Ctrl + –¥–≤–∏–∂–µ–Ω–∏–µ)
	var wants_to_run = Input.is_key_pressed(KEY_CTRL) and character_direction != Vector2.ZERO and can_move_now
	
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–æ—Å—Ç–æ—è–Ω–∏–µ –±–µ–≥–∞
	if wants_to_run and player_stats and player_stats.current_energy > 0:
		if not is_running:
			is_running = true
			print("–ù–∞—á–∞–ª –±–µ–∂–∞—Ç—å")
		# –¢—Ä–∞—Ç–∏–º —ç–Ω–µ—Ä–≥–∏—é –Ω–∞ –±–µ–≥
		if player_stats.consume_energy_float(energy_drain_rate * delta):
			pass  # –≠–Ω–µ—Ä–≥–∏—è –ø–æ—Ç—Ä–∞—á–µ–Ω–∞ —É—Å–ø–µ—à–Ω–æ
		else:
			# –≠–Ω–µ—Ä–≥–∏—è –∑–∞–∫–æ–Ω—á–∏–ª–∞—Å—å
			is_running = false
			print("–≠–Ω–µ—Ä–≥–∏—è –∑–∞–∫–æ–Ω—á–∏–ª–∞—Å—å, –ø–µ—Ä–µ—Ö–æ–∂—É –Ω–∞ —Ö–æ–¥—å–±—É")
	else:
		if is_running:
			is_running = false
			print("–ü–µ—Ä–µ—Å—Ç–∞–ª –±–µ–∂–∞—Ç—å")

	# –ü–ª–∞–≤–Ω–æ–µ –¥–≤–∏–∂–µ–Ω–∏–µ —Å —É—Å–∫–æ—Ä–µ–Ω–∏–µ–º –∏ —Ç–æ—Ä–º–æ–∂–µ–Ω–∏–µ–º
	var effective_speed = movement_speed * speed_multiplier
	if is_running:
		effective_speed *= run_speed_multiplier
	
	if character_direction != Vector2.ZERO:
		velocity = velocity.move_toward(character_direction * effective_speed, acceleration * delta)
	else:
		velocity = velocity.move_toward(Vector2.ZERO, friction * delta)

	# Flip —Å–ø—Ä–∞–π—Ç–∞
	if character_direction.x > 0:
		%sprite.flip_h = false
	elif character_direction.x < 0:
		%sprite.flip_h = true

	# –ê–Ω–∏–º–∞—Ü–∏–∏ —Å –Ω–æ–≤—ã–º–∏ —Å–ø—Ä–∞–π—Ç–∞–º–∏
	if velocity.length() > 10:  # –î–≤–∏–∂–µ–Ω–∏–µ
		var target_anim = ""
		
		# –í—ã–±–∏—Ä–∞–µ–º –∞–Ω–∏–º–∞—Ü–∏—é –≤ –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–∏ –æ—Ç —Å–∫–æ—Ä–æ—Å—Ç–∏
		if is_running:
			# –ë–µ–≥
			if %sprite.sprite_frames.has_animation("run"):
				target_anim = "run"
			elif %sprite.sprite_frames.has_animation("walk"):
				target_anim = "walk"
			elif %sprite.sprite_frames.has_animation("walking"):
				target_anim = "walking"
		else:
			# –û–±—ã—á–Ω–∞—è —Ö–æ–¥—å–±–∞
			if %sprite.sprite_frames.has_animation("walk"):
				target_anim = "walk"
			elif %sprite.sprite_frames.has_animation("walking"):
				target_anim = "walking"
		
		# –ü—Ä–∏–º–µ–Ω—è–µ–º –∞–Ω–∏–º–∞—Ü–∏—é
		if target_anim != "" and %sprite.animation != target_anim:
			%sprite.animation = target_anim
			%sprite.play()
		
		# –ó–≤—É–∫–∏ –¥–≤–∏–∂–µ–Ω–∏—è
		if not is_walking:
			is_walking = true
			update_movement_sounds()
		elif was_running != is_running:
			# –ò–∑–º–µ–Ω–∏–ª–æ—Å—å —Å–æ—Å—Ç–æ—è–Ω–∏–µ –±–µ–≥–∞ - –æ–±–Ω–æ–≤–ª—è–µ–º –∑–≤—É–∫–∏
			update_movement_sounds()
		
		was_running = is_running
			
	else:  # –°—Ç–æ–∏–º
		var target_anim = ""
		
		# –ü—Ä–æ–≤–µ—Ä—è–µ–º –∫–∞–∫–∏–µ –∞–Ω–∏–º–∞—Ü–∏–∏ –¥–æ—Å—Ç—É–ø–Ω—ã –¥–ª—è –ø–æ–∫–æ—è
		if %sprite.sprite_frames.has_animation("idle"):
			target_anim = "idle"
		elif %sprite.sprite_frames.has_animation("wait"):
			target_anim = "wait"
		
		# –ü—Ä–∏–º–µ–Ω—è–µ–º –∞–Ω–∏–º–∞—Ü–∏—é
		if target_anim != "" and %sprite.animation != target_anim:
			%sprite.animation = target_anim
			%sprite.play()
		
		# –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –∑–≤—É–∫–∏ –¥–≤–∏–∂–µ–Ω–∏—è
		if is_walking:
			is_walking = false
			stop_all_movement_sounds()

	move_and_slide()
	
	# –í–∏–∑—É–∞–ª—å–Ω—ã–π —ç—Ñ—Ñ–µ–∫—Ç –±—ã—Å—Ç—Ä–æ–≥–æ –¥–≤–∏–∂–µ–Ω–∏—è (–≤—ã—Å–æ–∫–∏–π —à–∞–Ω—Å —É–≤–æ—Ä–æ—Ç–∞)
	update_dodge_effect()

# –ú–µ—Ç–æ–¥—ã –¥–ª—è —Å–∏—Å—Ç–µ–º—ã —Ö–∞—Ä–∞–∫—Ç–µ—Ä–∏—Å—Ç–∏–∫
func set_speed_multiplier(multiplier: float):
	speed_multiplier = multiplier

func heal(amount: int):
	if player_stats:
		player_stats.heal(amount)

func take_damage(amount: int):
	# print("ü©∏ –ò–ì–†–û–ö –ü–û–õ–£–ß–ê–ï–¢ –£–†–û–ù: ", amount)
	# print("ü©∏ –°—Ç–µ–∫ –≤—ã–∑–æ–≤–æ–≤:")
	print(get_stack())
	
	# –í—Ä–µ–º–µ–Ω–Ω–∞—è –∑–∞—â–∏—Ç–∞ –æ—Ç —Å–∞–º–æ–ø–æ–≤—Ä–µ–∂–¥–µ–Ω–∏—è
	if amount <= 0:
		# print("‚ö†Ô∏è –ò–≥–Ω–æ—Ä–∏—Ä—É–µ–º –Ω—É–ª–µ–≤–æ–π –∏–ª–∏ –æ—Ç—Ä–∏—Ü–∞—Ç–µ–ª—å–Ω—ã–π —É—Ä–æ–Ω")
		return false
	
	if player_stats:
		return player_stats.take_damage(amount)
	return false

func restore_energy(amount: int):
	if player_stats:
		player_stats.restore_energy(amount)

func consume_energy(amount: int) -> bool:
	if player_stats:
		return player_stats.consume_energy(amount)
	return false

func get_mana() -> int:
	if player_stats:
		return player_stats.get_mana()
	return 0

func consume_mana(amount: int) -> bool:
	if player_stats:
		return player_stats.consume_mana(amount)
	return false

func apply_buff(buff_type: String, duration: float):
	if player_stats:
		player_stats.apply_buff(buff_type, duration)
func _ready():
	# –ù–∞—Å—Ç—Ä–æ–π–∫–∞ –∫–æ–ª–ª–∏–∑–∏–π
	collision_layer = 2  # –ò–≥—Ä–æ–∫
	collision_mask = 1 + 4  # –ú–∏—Ä + –í—Ä–∞–≥–∏ (—Å—Ç–µ–Ω—ã –∏ –≤—Ä–∞–≥–∏)
	
	# –û–¢–õ–ê–î–ö–ê: –ü—Ä–æ–≤–µ—Ä—è–µ–º –≥—Ä—É–ø–ø—ã –∏–≥—Ä–æ–∫–∞
	# print("üéÆ –ò–ì–†–û–ö –°–û–ó–î–ê–ù!")
	# print("   –ì—Ä—É–ø–ø—ã –∏–≥—Ä–æ–∫–∞: ", get_groups())
	# print("   –ü–æ–∑–∏—Ü–∏—è: ", global_position)
	
	# –£–±–µ–∂–¥–∞–µ–º—Å—è —á—Ç–æ –∏–≥—Ä–æ–∫ –ù–ï –≤ –≥—Ä—É–ø–ø–µ –≤—Ä–∞–≥–æ–≤
	if is_in_group("enemies"):
		# print("‚ö†Ô∏è –ö–†–ò–¢–ò–ß–ï–°–ö–ê–Ø –û–®–ò–ë–ö–ê: –ò–≥—Ä–æ–∫ –≤ –≥—Ä—É–ø–ø–µ –≤—Ä–∞–≥–æ–≤! –£–¥–∞–ª—è–µ–º...")
		remove_from_group("enemies")
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ —Å–∏–≥–Ω–∞–ª—É –∏–∑–º–µ–Ω–µ–Ω–∏—è –∞–∫—Ç–∏–≤–Ω–æ–≥–æ –ø—Ä–µ–¥–º–µ—Ç–∞
	if PlayerInventory:
		PlayerInventory.active_item_updated.connect(_on_active_item_changed)
	_update_item_display()

func _on_active_item_changed():
	"""–í—ã–∑—ã–≤–∞–µ—Ç—Å—è –ø—Ä–∏ –∏–∑–º–µ–Ω–µ–Ω–∏–∏ –∞–∫—Ç–∏–≤–Ω–æ–≥–æ –ø—Ä–µ–¥–º–µ—Ç–∞"""
	_update_item_display()

func _update_item_display():
	"""–û–±–Ω–æ–≤–ª—è–µ—Ç –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ –∞–∫—Ç–∏–≤–Ω–æ–≥–æ –ø—Ä–µ–¥–º–µ—Ç–∞"""
	if not item_display:
		return
	
	# –ü–æ–ª—É—á–∞–µ–º –∞–∫—Ç–∏–≤–Ω—ã–π –ø—Ä–µ–¥–º–µ—Ç –∏–∑ —Ö–æ—Ç–±–∞—Ä–∞
	var active_slot_index = PlayerInventory.active_item_slot
	if PlayerInventory.hotbar.has(active_slot_index):
		var item_data = PlayerInventory.hotbar[active_slot_index]
		var item_name = item_data[0]
		
		# –ó–∞–≥—Ä—É–∂–∞–µ–º –∏–∫–æ–Ω–∫—É –ø—Ä–µ–¥–º–µ—Ç–∞
		if JsonData.item_data.has(item_name):
			var icon_path = JsonData.item_data[item_name].get("Icon", "")
			if icon_path != "":
				var texture = load(icon_path)
				if texture:
					item_display.texture = texture
					item_display.visible = true
					return
	
	# –ï—Å–ª–∏ –Ω–µ—Ç –∞–∫—Ç–∏–≤–Ω–æ–≥–æ –ø—Ä–µ–¥–º–µ—Ç–∞ - —Å–∫—Ä—ã–≤–∞–µ–º
	item_display.visible = false

func update_dodge_effect():
	"""–ü—Ä–æ—Å—Ç–æ–π —ç—Ñ—Ñ–µ–∫—Ç –±—ã—Å—Ç—Ä–æ–≥–æ –¥–≤–∏–∂–µ–Ω–∏—è"""
	# –£–±–∏—Ä–∞–µ–º —Å–ª–æ–∂–Ω—ã–µ —ç—Ñ—Ñ–µ–∫—Ç—ã - –æ—Å—Ç–∞–≤–ª—è–µ–º —Ç–æ–ª—å–∫–æ –æ–±—ã—á–Ω—ã–π —Å–ø—Ä–∞–π—Ç
	%sprite.modulate = Color.WHITE

func get_dodge_chance() -> float:
	"""–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Ç–µ–∫—É—â–∏–π —à–∞–Ω—Å —É–≤–æ—Ä–æ—Ç–∞ –∏–≥—Ä–æ–∫–∞ (–¥–ª—è –æ—Ç–ª–∞–¥–∫–∏)"""
	var base_dodge = 0.1
	var current_speed = velocity.length()
	
	if current_speed > 100:
		var speed_bonus = min((current_speed - 100) / 200.0, 0.4)
		base_dodge += speed_bonus
	
	return base_dodge

# –§—É–Ω–∫—Ü–∏–∏ –¥–ª—è –¥–∏–∞–ª–æ–≥–æ–≤
func set_can_move(value: bool):
	"""–£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç –≤–æ–∑–º–æ–∂–Ω–æ—Å—Ç—å –¥–≤–∏–∂–µ–Ω–∏—è (–¥–ª—è –¥–∏–∞–ª–æ–≥–æ–≤)"""
	can_move = value
	if not can_move:
		velocity = Vector2.ZERO
		character_direction = Vector2.ZERO
		print("–î–≤–∏–∂–µ–Ω–∏–µ –∏–≥—Ä–æ–∫–∞ –∑–∞–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω–æ")
	else:
		print("–î–≤–∏–∂–µ–Ω–∏–µ –∏–≥—Ä–æ–∫–∞ —Ä–∞–∑–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω–æ")

func get_can_move() -> bool:
	"""–í–æ–∑–≤—Ä–∞—â–∞–µ—Ç –≤–æ–∑–º–æ–∂–Ω–æ—Å—Ç—å –¥–≤–∏–∂–µ–Ω–∏—è"""
	return can_move

func _input(event):
	"""–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –≤–≤–æ–¥ –¥–ª—è —Ç–µ–ª–µ–ø–æ—Ä—Ç–∞—Ü–∏–∏"""
	# –¢–µ–ª–µ–ø–æ—Ä—Ç–∞—Ü–∏—è –Ω–∞ game_level_2 –ø–æ –∫–ª–∞–≤–∏—à–µ F
	if event.is_action_pressed("ui_cancel") and Input.is_key_pressed(KEY_F):
		teleport_to_level("res://scenes/levels/game_level_2.tscn")

func teleport_to_level(level_path: String):
	"""–¢–µ–ª–µ–ø–æ—Ä—Ç–∏—Ä—É–µ—Ç –∏–≥—Ä–æ–∫–∞ –Ω–∞ –¥—Ä—É–≥–æ–π —É—Ä–æ–≤–µ–Ω—å"""
	print("üåÄ –¢–µ–ª–µ–ø–æ—Ä—Ç–∞—Ü–∏—è –Ω–∞: ", level_path)
	get_tree().change_scene_to_file(level_path)

func play_walk_sound():
	"""–ó–∞–ø—É—Å–∫–∞–µ—Ç –∑–≤—É–∫ —Ö–æ–¥—å–±—ã"""
	if walk_sound and not walk_sound.playing:
		# –ó–∞–≥—Ä—É–∂–∞–µ–º –∑–≤—É–∫ —Ö–æ–¥—å–±—ã
		var walk_audio = load("res://audio/walk.mp3")
		if walk_audio:
			walk_sound.stream = walk_audio
			walk_sound.pitch_scale = 1.0 + randf_range(-0.1, 0.1)  # –ù–µ–±–æ–ª—å—à–∞—è –≤–∞—Ä–∏–∞—Ü–∏—è –≤—ã—Å–æ—Ç—ã —Ç–æ–Ω–∞
			walk_sound.volume_db = -10.0  # –£–º–µ—Ä–µ–Ω–Ω–∞—è –≥—Ä–æ–º–∫–æ—Å—Ç—å
			
			# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª –¥–ª—è –∑–∞—Ü–∏–∫–ª–∏–≤–∞–Ω–∏—è
			if not walk_sound.finished.is_connected(_on_walk_sound_finished):
				walk_sound.finished.connect(_on_walk_sound_finished)
			
			walk_sound.play()
			print("üéµ –ó–≤—É–∫ —Ö–æ–¥—å–±—ã –∑–∞–ø—É—â–µ–Ω")
		else:
			print("‚ùå –ù–µ —É–¥–∞–ª–æ—Å—å –∑–∞–≥—Ä—É–∑–∏—Ç—å walk.mp3")

func stop_walk_sound():
	"""–û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç –∑–≤—É–∫ —Ö–æ–¥—å–±—ã (—É—Å—Ç–∞—Ä–µ–≤—à–∞—è —Ñ—É–Ω–∫—Ü–∏—è, –∏—Å–ø–æ–ª—å–∑—É–π—Ç–µ stop_all_movement_sounds)"""
	if walk_sound and walk_sound.playing:
		walk_sound.stop()
		print("üéµ –ó–≤—É–∫ —Ö–æ–¥—å–±—ã –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")

func update_movement_sounds():
	"""–û–±–Ω–æ–≤–ª—è–µ—Ç –∑–≤—É–∫–∏ –¥–≤–∏–∂–µ–Ω–∏—è –≤ –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–∏ –æ—Ç —Å–æ—Å—Ç–æ—è–Ω–∏—è"""
	# –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –≤—Å–µ –∑–≤—É–∫–∏ –¥–≤–∏–∂–µ–Ω–∏—è
	stop_all_movement_sounds()
	
	# –ó–∞–ø—É—Å–∫–∞–µ–º –Ω—É–∂–Ω—ã–π –∑–≤—É–∫
	if is_running:
		play_run_sound()
	else:
		play_walk_sound()

func play_run_sound():
	"""–ó–∞–ø—É—Å–∫–∞–µ—Ç –∑–≤—É–∫ –±–µ–≥–∞"""
	if run_sound and not run_sound.playing:
		# –ó–∞–≥—Ä—É–∂–∞–µ–º –∑–≤—É–∫ –±–µ–≥–∞
		var run_audio = load("res://audio/run.ogg")
		if run_audio:
			run_sound.stream = run_audio
			run_sound.pitch_scale = 1.0 + randf_range(-0.05, 0.05)  # –ú–µ–Ω—å—à–∞—è –≤–∞—Ä–∏–∞—Ü–∏—è –¥–ª—è –±–µ–≥–∞
			run_sound.volume_db = -8.0  # –ù–µ–º–Ω–æ–≥–æ –≥—Ä–æ–º—á–µ —á–µ–º —Ö–æ–¥—å–±–∞
			
			# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª –¥–ª—è –∑–∞—Ü–∏–∫–ª–∏–≤–∞–Ω–∏—è
			if not run_sound.finished.is_connected(_on_run_sound_finished):
				run_sound.finished.connect(_on_run_sound_finished)
			
			run_sound.play()
			print("üèÉ –ó–≤—É–∫ –±–µ–≥–∞ –∑–∞–ø—É—â–µ–Ω")
		else:
			print("‚ùå –ù–µ —É–¥–∞–ª–æ—Å—å –∑–∞–≥—Ä—É–∑–∏—Ç—å run.mp3")

func stop_all_movement_sounds():
	"""–û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ—Ç –≤—Å–µ –∑–≤—É–∫–∏ –¥–≤–∏–∂–µ–Ω–∏—è"""
	if walk_sound and walk_sound.playing:
		walk_sound.stop()
	if run_sound and run_sound.playing:
		run_sound.stop()
	print("üéµ –í—Å–µ –∑–≤—É–∫–∏ –¥–≤–∏–∂–µ–Ω–∏—è –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω—ã")

func _on_walk_sound_finished():
	"""–í—ã–∑—ã–≤–∞–µ—Ç—Å—è –∫–æ–≥–¥–∞ –∑–≤—É–∫ —Ö–æ–¥—å–±—ã –∑–∞–∫–æ–Ω—á–∏–ª—Å—è"""
	# –ï—Å–ª–∏ –∏–≥—Ä–æ–∫ –≤—Å–µ –µ—â–µ –∏–¥–µ—Ç (–Ω–æ –Ω–µ –±–µ–∂–∏—Ç) - –ø–æ–≤—Ç–æ—Ä—è–µ–º –∑–≤—É–∫ —Ö–æ–¥—å–±—ã
	if is_walking and velocity.length() > 10 and not is_running:
		play_walk_sound()

func _on_run_sound_finished():
	"""–í—ã–∑—ã–≤–∞–µ—Ç—Å—è –∫–æ–≥–¥–∞ –∑–≤—É–∫ –±–µ–≥–∞ –∑–∞–∫–æ–Ω—á–∏–ª—Å—è"""
	# –ï—Å–ª–∏ –∏–≥—Ä–æ–∫ –≤—Å–µ –µ—â–µ –±–µ–∂–∏—Ç - –ø–æ–≤—Ç–æ—Ä—è–µ–º –∑–≤—É–∫ –±–µ–≥–∞
	if is_walking and velocity.length() > 10 and is_running:
		play_run_sound()
